floating menu fixes, simple nav spacing

--- a/packages/styles/theme/_variables.scss
+++ b/packages/styles/theme/_variables.scss
@@ -14,7 +14,7 @@ $row-section-thirds-threshold: 1400px;
 $side-bar-width: 60px;
 $side-nav-maximised-width: 145px;
 $side-nav-minimised-width: 75px;
-$side-menu-floating-width: 195px;
+$side-menu-floating-width: 250px;
 
 // Header
 $header-height: 3.75rem;
